@@ -5,3 +5,4 @@
 - Updated the Status Page to use a CSS Loading Spinner to replace the deprecated Spinner Gif from Gravity Forms Core.
 - Updated the Assignee Email Message Textarea to improve support for the TinyMCE Editor from Gravity Forms 2.5
 - Fixed an issue that causes Order Summary to display on Complete Step even when the setting was disabled.
+- Fixed the entry filter setting to support the filters being passed in the field config which improves Form Connector extension remote site scenarios.
